--- a/index.html
+++ b/index.html
@@ -1,57 +1,390 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Comforty-An Outstanding variety of products </title>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel="stylesheet" href="style.css">
+
+  <title>Comforty-An Outstanding variety of products </title>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <div class="container-fluid">
-          <a class="navbar-brand fw-bold" href="#">Comforty</a>
-            <form class="d-flex justify-content-space-evenly">
-              <input class="form-control mx-3" type="search" placeholder="Search" aria-label="Search">
-              <div class="cart d-flex border mx-2 p-2">
-                <i class="fa-solid fa-cart-shopping py-1 px-2" style="color: #363636;"></i>Cart
-              </div>
-              <div class="p-2 border mx-3">
-                <i class="fa-solid fa-heart px-2" style="color: #363636;"></i>
-              </div>
-              <div class="p-2 border mx-3">
-                <i class="fa-solid fa-user px-2" style="color: #363636;"></i>
-              </div>
-            </form>
-          </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container-fluid">
+      <a class="navbar-brand fw-bold" href="#">Comforty</a>
+      <form class="d-flex justify-content-space-evenly">
+        <input class="form-control mx-3" type="search" placeholder="Search" aria-label="Search">
+        <div class="cart d-flex border mx-2 p-2">
+          <i class="fa-solid fa-cart-shopping py-1 px-2" style="color: #363636;"></i>Cart
         </div>
-      </nav>
-      <div class="collapse" id="navbarToggleExternalContent">
-        <div class=" bg-white text-secondary p-4">
-          <h5 class="h4">Collapsed content</h5>
-          <span class="text-muted">Toggleable via the navbar brand.</span>
+        <div class="p-2 border mx-3">
+          <i class="fa-solid fa-heart px-2" style="color: #363636;"></i>
+        </div>
+        <div class="p-2 border mx-3">
+          <i class="fa-solid fa-user px-2" style="color: #363636;"></i>
+        </div>
+      </form>
+    </div>
+    </div>
+  </nav>
+  <div class="collapse" id="navbarToggleExternalContent">
+    <div class=" bg-white text-secondary">
+      <h5 class="h4">Collapsed content</h5>
+      <span class="text-muted">Toggleable via the navbar brand.</span>
+    </div>
+  </div>
+  <nav class="navbar navbar-dark bg-white text-secondary">
+    <div class="container-fluid">
+      <div class="row">
+        <button class="navbar-toggler border text-secondary" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon "></span>
+          All Categories
+        </button>
+        <a class="text-secondary text-decoration-none" href="#">Home</a>
+        <a class="text-secondary text-decoration-none" href="#">Shop</a>
+        <a class="text-secondary text-decoration-none" href="#">Product</a>
+        <a class="text-secondary text-decoration-none" href="#">About</a>
+      </div>
+    </div>
+  </nav>
+  <section>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4 m-auto">
+          <h6>WELCOME TO CHAIRY</h6>
+          <p class="fw-bold fs-1">Best Furniture Collection For Your Interior</p>
+          <button class="btn btn-info text-white">
+            Shop Now
+            <i class="fa-solid fa-arrow-right" style="color: #ffffff; padding-left: 0.5rem;"></i>
+          </button>
+        </div>
+        <div class="col-lg-6">
+          <img src="images/Copy of banner.png" alt="image">
         </div>
       </div>
-      <nav class="navbar navbar-dark bg-white text-secondary">
-        <div class="container-fluid">
-          <div class="row">
-            <button class="navbar-toggler border  text-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon "></span>
-              All Categories
-            </button>
-            <a class="text-secondary text-decoration-none" href="#">Home</a>
-            <a class="text-secondary text-decoration-none" href="#">Shop</a>
-            <a class="text-secondary text-decoration-none" href="#">Product</a>
-            <a class="text-secondary text-decoration-none" href="#">About</a>
+    </div>
+  </section>
+  <section>
+    <h4 class="fw-bold">Featured Products</h4>
+    <div class="owl-carousel owl-theme">
+      <div class="item">
+        <div class="card">
+          <img src="images/chair-n1.jpg" class="card-img-top image-size-1">
+          <div class="card-body">
+            <div class="card-title">
+              <h5 class="card-title">Card-title </h5>
+              <div class="mt-3 d-flex justify-content-evenly">
+                <p class="card-text">$40</p>
+                <span class="bg-color px-1">
+                  <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                </span>
+              </div>
+            </div>
           </div>
         </div>
-      </nav>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+      </div>
+      <div class="item">
+        <div class="card">
+          <img src="images/chair1.jpg" class="card-img-top image-size-1">
+          <div class="card-body">
+            <div class="card-title">
+              <h5 class="card-title">Library Stool Chair</h5>
+              <div class="mt-3 d-flex justify-content-evenly">
+                <p class="card-text">$40</p>
+                <span class="bg-color px-1">
+                  <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="card">
+          <img src="images/chair-n3.jpg" class="card-img-top image-size-1">
+          <div class="card-body">
+            <div class="card-title">
+              <h5 class="card-title">Card-title </h5>
+              <div class="mt-3 d-flex justify-content-evenly">
+                <p class="card-text">$40</p>
+                <span class="bg-color px-1">
+                  <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="card">
+          <img src="images/chair4.jpg" class="card-img-top image-size-1">
+          <div class="card-body">
+            <div class="card-title">
+              <h5 class="card-title">Card-title </h5>
+              <div class="mt-3 d-flex justify-content-evenly">
+                <p class="card-text">$40</p>
+                <span class="bg-color px-1">
+                  <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="card">
+          <img src="images/chair-n1.jpg" class="card-img-top image-size-1">
+          <div class="card-body">
+            <div class="card-title">
+              <h5 class="card-title">Card-title </h5>
+              <div class="mt-3 d-flex justify-content-evenly">
+                <p class="card-text">$40</p>
+                <span class="bg-color px-1">
+                  <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="card">
+          <img src="images/chair1.jpg" class="card-img-top image-size-1">
+          <div class="card-body">
+            <div class="card-title">
+              <h5 class="card-title">Library Stool Chair</h5>
+              <div class="mt-3 d-flex justify-content-evenly">
+                <p class="card-text">$40</p>
+                <span class="bg-color px-1">
+                  <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="card">
+          <img src="images/chair-n3.jpg" class="card-img-top image-size-1">
+          <div class="card-body">
+            <div class="card-title">
+              <h5 class="card-title">Card-title </h5>
+              <div class="mt-3 d-flex justify-content-evenly">
+                <p class="card-text">$40</p>
+                <span class="bg-color px-1">
+                  <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <div class="card">
+          <img src="images/chair4.jpg" class="card-img-top image-size-1">
+          <div class="card-body">
+            <div class="card-title">
+              <h5 class="card-title">Card-title </h5>
+              <div class="mt-3 d-flex justify-content-evenly">
+                <p class="card-text">$40</p>
+                <span class="bg-color px-1">
+                  <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="products">
+    <div class="container-fluid">
+      <h4 class="text-center">Our products</h4>
+      <div class="row d-flex justify-content-center">
+        <div class="col-lg-3">
+          <div class="card">
+            <img src="images/chair-n1.jpg" class="card-img-top image-size-1">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 class="card-title">Card-title </h5>
+                <div class="mt-3 d-flex justify-content-evenly">
+                  <p class="card-text">$40</p>
+                  <span class="bg-color px-1">
+                    <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="card">
+            <img src="images/chair3.jpg" class="card-img-top image-size-1">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 class="card-title">Card-title </h5>
+                <div class="mt-3 d-flex justify-content-evenly">
+                  <p class="card-text">$40</p>
+                  <span class="bg-color px-1">
+                    <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="card">
+            <img src="images/chair-n5.jpg" class="card-img-top image-size-1">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 class="card-title">Card-title </h5>
+                <div class="mt-3 d-flex justify-content-evenly">
+                  <p class="card-text">$40</p>
+                  <span class="bg-color px-1">
+                    <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="card">
+            <img src="images/chair4.jpg" class="card-img-top image-size-1">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 class="card-title">Card-title </h5>
+                <div class="mt-3 d-flex justify-content-evenly">
+                  <p class="card-text">$40</p>
+                  <span class="bg-color px-1">
+                    <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center mt-4">
+        <div class="col-lg-3">
+          <div class="card">
+            <img src="images/chair-n1.jpg" class="card-img-top image-size-1">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 class="card-title">Card-title </h5>
+                <div class="mt-3 d-flex justify-content-evenly">
+                  <p class="card-text">$40</p>
+                  <span class="bg-color px-1">
+                    <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="card">
+            <img src="images/chair3.jpg" class="card-img-top image-size-1">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 class="card-title">Card-title </h5>
+                <div class="mt-3 d-flex justify-content-evenly">
+                  <p class="card-text">$40</p>
+                  <span class="bg-color px-1">
+                    <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="card">
+            <img src="images/chair-n5.jpg" class="card-img-top image-size-1">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 class="card-title">Card-title </h5>
+                <div class="mt-3 d-flex justify-content-evenly">
+                  <p class="card-text">$40</p>
+                  <span class="bg-color px-1">
+                    <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="card">
+            <img src="images/chair4.jpg" class="card-img-top image-size-1">
+            <div class="card-body">
+              <div class="card-title">
+                <h5 class="card-title">Card-title </h5>
+                <div class="mt-3 d-flex justify-content-evenly">
+                  <p class="card-text">$40</p>
+                  <span class="bg-color px-1">
+                    <i class="fa-solid fa-cart-arrow-down" style="color: #ffffff;"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+    integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+    integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+  <script>
+    $('.owl-carousel').owlCarousel({
+      loop: true,
+      margin: 10,
+      nav: true,
+      dots: false,
+      responsive: {
+        0: {
+          items: 1
+        },
+        600: {
+          items: 3
+        },
+        1000: {
+          items: 4
+        }
+      }
+    })
+  </script>
 </body>
+
 </html>
